WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118101
AX: IOS: crash while navigating with SVG
https://bugs.webkit.org/show_bug.cgi?id=118101
Summary
AX: IOS: crash while navigating with SVG
chris fleizach
Reported
2013-06-26 17:00:49 PDT
Go to a page like
http://cookiecrook.com/longdesc/svg/
with VoiceOver and it will crash eventually Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed: 0 WebCore 0x006b87e2 WebCore::Path::Path(WebCore::Path const&) + 2 1 WebCore 0x00010bd8 WebCore::AccessibilityRenderObject::elementPath() const + 32 2 WebCore 0x0096d3a8 -[WebAccessibilityObjectWrapper _accessibilityPath] + 156
Attachments
patch
(3.01 KB, patch)
2013-06-26 17:21 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(4.97 KB, patch)
2013-06-26 17:28 PDT
,
chris fleizach
schenney
: review+
Details
Formatted Diff
Diff
Archive of layout-test-results from APPLE-EWS-2 for win-future
(1.01 MB, application/zip)
2013-06-27 05:06 PDT
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-06-26 17:21:50 PDT
Created
attachment 205545
[details]
patch
chris fleizach
Comment 2
2013-06-26 17:28:17 PDT
Created
attachment 205546
[details]
patch
Build Bot
Comment 3
2013-06-27 05:06:41 PDT
Comment on
attachment 205546
[details]
patch
Attachment 205546
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/995207
New failing tests: fast/forms/basic-textareas.html
Build Bot
Comment 4
2013-06-27 05:06:45 PDT
Created
attachment 205590
[details]
Archive of layout-test-results from APPLE-EWS-2 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-2 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Stephen Chenney
Comment 5
2013-06-27 06:09:35 PDT
Comment on
attachment 205546
[details]
patch No idea why tests are breaking. This is a good find and fix.
chris fleizach
Comment 6
2013-06-27 09:52:04 PDT
https://trac.webkit.org/changeset/152105
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug