AX: IOS: crash while navigating with SVG https://bugs.webkit.org/show_bug.cgi?id=118101

Source/WebCore:

Need to check if the SVG path exists before copying it.

Reviewed by Stephen Chenney.

Test: platform/iphone-simulator/accessibility/svg-path-crash.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::elementPath):
* rendering/svg/RenderSVGShape.h:
(WebCore::RenderSVGShape::hasPath):

LayoutTests:

Reviewed by Stephen Chenney.

* platform/iphone-simulator/accessibility/svg-path-crash-expected.txt: Added.
* platform/iphone-simulator/accessibility/svg-path-crash.html: Added.



Canonical link: https://commits.webkit.org/136184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152105 268f45cc-cd09-0410-ab3c-d52691b4dbfc